<resources>
    <string name="empty" translatable="false">""</string>
    <string name="app_name">Meu Carro</string>
    <string name="sel_comb">Calculadora Flex</string>
    <string name="sel_abast">Abastecimentos</string>
    <string name="sel_oil">Óleo</string>
    <string name="sel_veic">Veículos</string>
    <string name="sel_ajuda">Ajuda e feedback</string>
    <string name="config">Configurações</string>
    <string name="sel_manut">Manutenção</string>
    <string name="sel_report">Relatórios</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="action_add_veic">Incluir veículo</string>
    <string name="action_add_oil">Incluir troca de óleo</string>
    <string name="action_add_abst">Incluir abastecimento</string>
    <string name="action_settings">Configurações</string>
    <string name="help_here_calculo">Insira um veículo para fazer o calculo de combustivel.</string>
    <string name="help_here_abastecimento">Insira um abastecimento para melhorar o calculo de consumo</string>
    <string name="help_here_veiculo">Insira um veículo para calcular o consumo</string>
    <string name="help_here_oil">Insira uma troca de óleo para calcular a próxima troca</string>
    <string name="selecione_carro">Selecione os carros</string>
    <string name="selecione_oleo">Selecione as trocas de óleo</string>
    <string name="selecione_fuel">Selecione os abastecimentos</string>
    <string name="desfazer">Desfazer</string>
    <string name="gasolina">Gasolina</string>
    <string name="Etanol">Etanol</string>
    <string name="gnv">GNV</string>
    <string name="diesel">Diesel</string>
    <string name="intervalo_valido">O intervalo válido é %1$s à %2$s %3$s</string>
    <string name="km_hint_anterior">a partir de %1$s %2$s</string>
    <string name="km_atual">%1$s atual</string>
    <string name="selecione_um_combustivel">Selecione um combustivel</string>
    <string name="o_volume_nao_pode">O volume não pode ser zero (%1$s)!</string>
    <string name="o_volume_nao_pode_max">O volume não pode ser maior que %1$s (%2$s)!</string>
    <string name="km_atual_maior">O odômetro atual (%1$d) não pode ser igual ou MAIOR que o último (%2$d)!</string>
    <string name="km_atual_menor">A odômetro atual (%1$d) não pode ser igual ou MENOR que o último (%2$d)!</string>
    <string name="inativo">Inativo</string>
    <string name="ativo">Ativo</string>
    <string name="salvar">Salvar</string>
    <string name="deletar">Deletar</string>
    <string name="set_as_default">Setar como Default</string>
    <string name="editar">Editar</string>
    <string name="combustivel">Combustível</string>
    <string name="autonomia">Autonomia</string>
    <string name="custo">Custo</string>
    <string name="dash">-</string>
    <string name="custo_km">Custo %1$s</string>
    <string name="tanque_cheio">Tanque cheio</string>
    <string name="date_hint">12/07/2014</string>
    <string name="data_do_abastecimento">Data do abastecimento</string>
    <string name="odometro_atual">Odômetro atual</string>
    <string name="volume_abastecido">volume abastecido</string>
    <string name="combustivel_utilizado">combustível utilizado</string>
    <string name="data_troca_de_oleo">data da troca de óleo</string>
    <string name="odometro_na_proxima_troca">odômetro na próxima troca</string>
    <string name="oleo_utilizado">óleo utilizado</string>
    <string name="volume_do_oleo">volume de óleo</string>
    <string name="filtro">Filtro</string>
    <string name="nome_do_carro">Nome do carro</string>
    <string name="combustiveis_e_consumo">combustiveis e consumo</string>
    <string name="volume_do_combustivel">volume do combustível</string>
    <string name="Volume_do_combustivel">Volume do combustível</string>
    <string name="Volume_do_gnv">Volume do GNV</string>
    <string name="tipo_de_veiculo">tipo de veiculo</string>
    <string name="oleo">Óleo</string>
    <string name="odometro_proxima_troca">Odômetro próxima troca</string>
    <string name="volume">Volume abastecido</string>
    <string name="consumo">Consumo</string>
    <string name="distancia_percorrida">Distância percorrida</string>
    <string name="simbolo_moeda">R$ </string>
    <string name="zerado_valor">0,00</string>
    <string name="nome_modelo_existente">Esse veículo já existe</string>
    <string name="consumo_existente">Esse consumo já existe</string>
    <string name="nenhum">Nenhum</string>
    <string name="erro_na_data_inserida">Erro na data inserida</string>
    <string name="insira_um_veiculo">Insira um veículo</string>
    <string name="registro_existente">Registro existente</string>
    <string name="erro_atualizar">Erro ao atualizar</string>
    <string name="erro_deletar">Erro ao deletar</string>
    <string name="carro_sport">Sport</string>
    <string name="carro_sedan">Sedan</string>
    <string name="carro_hatch">Hatch</string>
    <string name="carro_sw">SW</string>
    <string name="carro_suv">SUV</string>
    <string name="carro_conversivel">Conversível</string>
    <string name="carro_utilitario">Utilitário</string>
    <string name="carro_moto_sport">Moto Sport</string>
    <string name="carro_chooper">Chooper</string>
    <string name="carro_scooter">Scooter</string>
    <string name="carro_cross">Cross</string>
    <string name="primeiro_consumo_nao_vazio">O primeiro consumo selecionado não pode ser vazio</string>
    <string name="segundo_consumo_nao_vazio">O segundo consumo selecionado não pode ser vazio</string>
    <string name="terceiro_consumo_nao_vazio">O terceiro consumo selecionado não pode ser vazio</string>
    <string name="quarto_consumo_nao_vazio">O quarto consumo selecionado não pode ser vazio</string>
    <string name="carro_nao_vazio">O Nome do veículo não pode ser vazio</string>
    <string name="selecione_ao_menos_um_combustivel">Selecione ao menos um combustivel</string>
    <string name="indique_volume_tanque">Indique o volume do tanque de combustivel</string>
    <string name="indique_volume_gnv">Indique o volume do cilindro de GNV</string>
    <string name="nome_do_oleo_vazio">O nome do óleo não pode ser vazio</string>
    <string name="km_atual_vazio">O odometro atual não pode ser zero</string>
    <string name="km_proxima_troca_vazio">O odometro da próxima troca não pode ser vazia</string>
    <string name="km_anterior_proximo_oil">%1$s anterior %2$d ( próxima com %2$d)</string>
    <string name="proxima_troca_medida">%1$s próxima troca</string>
    <string-array name="consumo_comb_entry_kml">
        <item>km/L</item>
        <item>L/100km</item>
    </string-array>
    <string-array name="consumo_comb_entry_kmg">
        <item>km/G</item>
        <item>G/100km</item>
    </string-array>
    <string-array name="consumo_comb_entry_mig">
        <item>mi/G</item>
        <item>G/100mi</item>
    </string-array>
    <string-array name="consumo_comb_entry_mil">
        <item>mi/L</item>
        <item>L/100mi</item>
    </string-array>
    <string-array name="consumo_gnv_entry_kmm">
        <item>km/m³</item>
        <item>m³/100km</item>
    </string-array>
    <string-array name="consumo_gnv_entry_kmy">
        <item>km/yd³</item>
        <item>yd³/100km</item>
    </string-array>
    <string-array name="consumo_gnv_entry_miy">
        <item>mi/yd³</item>
        <item>yd³/100mi</item>
    </string-array>
    <string-array name="consumo_gnv_entry_mim">
        <item>mi/m³</item>
        <item>m³/100mi</item>
    </string-array>
    <string-array name="consumo_values">
        <item>mpv</item>
        <item>v100m</item>
    </string-array>
    <string-array name="custo_name">
        <item>Autonomia</item>
        <item>Custo</item>
    </string-array>
    <string-array name="custo_values">
        <item>autonomia</item>
        <item>custo</item>
    </string-array>
    <string-array name="list_combustiveis">
        <item>Nenhum</item>
        <item>Gasolina</item>
        <item>Etanol</item>
        <item>GNV</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="medida_entry">
        <item>Quilômetros</item>
        <item>Milhas</item>
    </string-array>
    <string-array name="medida_values">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string-array name="vol_tanque_entry">
        <item>Litros</item>
        <item>Galões US</item>
        <item>Galões UK</item>
    </string-array>
    <string-array name="vol_tanque_values">
        <item>LTS</item>
        <item>GUS</item>
        <item>GUK</item>
    </string-array>
    <string-array name="vol_gnv_entry">
        <item>Metros cúbicos (m³)</item>
        <item>Jardas cúbicas (yd³)</item>
    </string-array>
    <string-array name="vol_gnv_values">
        <item>MTS</item>
        <item>YAD</item>
    </string-array>
    <string-array name="limit_select">
        <item>Todos os abastecimentos</item>
        <item>5 abastecimentos</item>
        <item>10 abastecimentos</item>
        <item>15 abastecimentos</item>
        <item>20 abastecimentos</item>
    </string-array>
    <string-array name="limit_select_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="default_m3">m³</string>
    <string name="default_pol3">yd³</string>
    <string name="default_lts">L</string>
    <string name="default_gaus">G</string>
    <string name="default_gauk">G</string>
    <string name="default_un_volume_tanque">LTS</string>
    <string name="default_vol_tq_gnv">MTS</string>
    <string name="default_afer_calc">mpv</string>
    <string name="default_afer_calc_gnv">mpv</string>
    <string name="default_custo">custo</string>
    <string name="default_select">0</string>
    <string name="default_distancia">km</string>
    <string name="unidade_combustivel">Combustivel</string>
    <string name="unidade_gnv">GNV</string>
    <string name="unidade_odometro">Odômetro</string>
    <string name="vol_tanque">Tanque</string>
    <string name="afer_distancia">Odometro</string>
    <string name="afer_calculo">Consumo</string>
    <string name="vol_gnv">Cilindro</string>
    <string name="type_calc">Calculo</string>
    <string name="calc_abast">Abastecimento</string>
    <string name="calc_sum_consumo">Média Geral</string>
    <string name="calculo_media_consumo_full">A média geral de consumo será por todos abastecimentos</string>
    <string name="calculo_media_consumo_5">A média geral de consumo será pelos 5 últimos abastecimentos</string>
    <string name="calculo_media_consumo_10">A média geral de consumo será pelos 10 últimos abastecimentos</string>
    <string name="calculo_media_consumo_15">A média geral de consumo será pelos 15 últimos abastecimentos</string>
    <string name="calculo_media_consumo_20">A média geral de consumo será pelos 20 últimos abastecimentos</string>
    <string name="calculo_type_autonomia">O calculo será feito pela autonomia</string>
    <string name="calculo_type_custo">O calculo será feito pelo custo</string>
    <string name="vol_medido_m3">O volume será medido em m³</string>
    <string name="consumo_kml">O consumo será medido em km/L</string>
    <string name="consumo_kmm">O consumo será medido em km/m³</string>
    <string name="vol_tanque_lts">O volume será medido em Litros</string>
    <string name="vol_gnv_mt">O volume será medido em m³</string>
    <string name="medida_km">O Odômetro está em Quilômetros (KM)</string>
    <string name="tipo_de_calculo">Tipo de calculo</string>
    <string name="valor_total">Valor total</string>
    <string name="bkp_title">Criar backup</string>
    <string name="main_bkp_title">Backup</string>
    <string name="bkp_restore_title">Fazer Restore</string>
    <string name="summary_backup">Criar um backup agora</string>
    <string name="summary_restore">Restaura um backup</string>
</resources>