<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/action_submenu_default"
            android:icon="@drawable/ic_toolbar_set_default"
            android:title="@string/set_as_default"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_submenu_edit"
            android:icon="@drawable/ic_toolbar_edit"
            android:title="@string/editar"
            app:showAsAction="always" />
    </group>
    <item
        android:id="@+id/action_submenu_del"
        android:icon="@drawable/ic_toolbar_delete"
        android:title="@string/deletar"
        app:showAsAction="always" />
</menu>